--- a/android/app/src/main/res/layout/library.xml
+++ b/android/app/src/main/res/layout/library.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Library">
+    tools:context=".Activity.Library"
+    android:background="#FFFF">
 
     <RelativeLayout
         android:id="@+id/main_layout"
@@ -25,11 +26,6 @@
             android:layout_height="70dp"
             android:background="@color/colorPrimary">
 
-            <TextView
-                android:id="@+id/test"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ddd"/>
 
             <EditText
                 android:id="@+id/search_bar"
@@ -60,6 +56,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/manga_recycler_view"
+            android:scrollbars="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/navigation_bar"
