scan resize is functionnal

--- a/android/app/src/main/res/layout/page_layout.xml
+++ b/android/app/src/main/res/layout/page_layout.xml
@@ -6,22 +6,48 @@
     android:layout_marginHorizontal="5dp"
     tools:context=".Activity.Reading"
     android:orientation="vertical"
-    android:id="@+id/page"
-    android:background="@color/button_color">
+    android:id="@+id/page">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/page_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/no_value"
+        android:layout_centerInParent="true">
 
-        <ImageView
-            android:id="@+id/page_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:contentDescription="@string/no_value"
-            android:layout_centerInParent="true">
-
-        </ImageView>
-    </RelativeLayout>
+    </ImageView>
 
 </LinearLayout>
+
+
+
+
+
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginHorizontal="5dp"-->
+    <!--tools:context=".Activity.Reading"-->
+    <!--android:orientation="vertical"-->
+    <!--android:id="@+id/page">-->
+
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <!--<ImageView-->
+            <!--android:id="@+id/page_content"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:contentDescription="@string/no_value"-->
+            <!--android:layout_centerInParent="true">-->
+
+        <!--</ImageView>-->
+    <!--</RelativeLayout>-->
+
+<!--</LinearLayout>-->
