--- a/android/app/src/main/res/layout/page_layout.xml
+++ b/android/app/src/main/res/layout/page_layout.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="10dp"
-        android:contentDescription="@string/no_value"
-        android:layout_centerInParent="true">
+        android:contentDescription="@string/no_value">
+        <!--android:layout_centerInParent="true"-->
 
     </ImageView>
 
