update_content.py : write new pages fixed

--- a/android/app/src/main/res/layout/activity_research.xml
+++ b/android/app/src/main/res/layout/activity_research.xml
@@ -93,7 +93,7 @@
                 android:id="@+id/textview_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/category"
+                android:text="@string/search"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="20dp"
