--- a/android/app/src/main/res/layout/activity_chosen_manga.xml
+++ b/android/app/src/main/res/layout/activity_chosen_manga.xml
@@ -178,7 +178,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="20dp"
-                android:text="@string/category"
+                android:text="@string/search"
 
                 />
 
