--- a/android/app/src/main/res/layout/library.xml
+++ b/android/app/src/main/res/layout/library.xml
@@ -65,57 +65,55 @@
         <RelativeLayout
             android:id="@+id/navigation_bar"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="90dp"
             android:layout_alignParentBottom="true">
 
             <ImageButton
                 android:id="@+id/go_to_library_button"
-                android:layout_width="25dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="15dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="40dp"
+                android:layout_width="30dp"
+                android:layout_height="35dp"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="40dp"
                 android:background="@drawable/library_image" />
 
             <TextView
                 android:id="@+id/textView_library"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/library"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="20dp"
                 android:layout_marginStart="10dp"
-                />
+                android:layout_marginBottom="20dp"
+                android:text="@string/library" />
 
             <ImageButton
                 android:id="@+id/go_to_search_button"
-                android:layout_width="25dp"
-                android:layout_height="30dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="40dp"
-                android:background="@drawable/search_icon"
-                />
+                android:background="@drawable/search_icon" />
 
             <TextView
                 android:id="@+id/textview_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/search"
-                android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
                 android:layout_marginBottom="20dp"
+                android:text="@string/search"
 
                 />
 
             <ImageButton
                 android:id="@+id/go_to_favorite"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginRight="20dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
+                android:layout_marginRight="20dp"
                 android:layout_marginBottom="40dp"
                 android:background="@drawable/favorite_image" />
 
@@ -123,11 +121,11 @@
                 android:id="@+id/textview_favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/favorite"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="20dp"
-                android:layout_marginEnd="10dp"/>
+                android:text="@string/favorite" />
 
 
         </RelativeLayout>
