--- a/android/app/src/main/res/layout/card_view.xml
+++ b/android/app/src/main/res/layout/card_view.xml
@@ -16,7 +16,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="5dp"
         android:background="#FFFF">
 
@@ -32,7 +32,7 @@
         <TextView
             android:id="@+id/book_title"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:gravity="center"
             android:textSize="12sp"
