--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <resources>
-    <color name="colorPrimary">#96E675</color>
+    <color name="colorPrimary">#5DAF3B</color>
     <color name="button_color">#5DAF3B</color>
-    <color name="TopBar">#96E675</color>
+    <color name="TopBar">#5DAF3B</color>
     <color name="colorAccent">#E0E0E0</color>
     <color name="text_header">#FFFF</color>
     <color name="text_color">#000</color>
