android : nouvelle interface + barre de recherche ok

--- a/android/app/src/main/res/layout/activity_research.xml
+++ b/android/app/src/main/res/layout/activity_research.xml
@@ -88,7 +88,7 @@
                 android:background="@drawable/search_icon" />
 
             <TextView
-                android:id="@+id/textview_category"
+                android:id="@+id/textview_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
