--- a/android/app/src/main/res/layout/activity_favorites.xml
+++ b/android/app/src/main/res/layout/activity_favorites.xml
@@ -23,7 +23,7 @@
         <RelativeLayout
             android:id="@+id/header_layout"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="30dp"
             android:background="@color/colorPrimary">
 
 
@@ -81,7 +81,7 @@
                 android:background="@drawable/search_icon" />
 
             <TextView
-                android:id="@+id/textview_category"
+                android:id="@+id/textview_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
