--- a/android/app/src/main/res/layout/splash_screen.xml
+++ b/android/app/src/main/res/layout/splash_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,18 +11,14 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/meat"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        android:layout_centerInParent="true"/>
 
     <ProgressBar
+        android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/meat"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:indeterminate="true"/>
+        android:indeterminate="true"
+        android:layout_below="@id/meat"
+        android:layout_centerHorizontal="true"/>
 
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
